--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
     "version": "0.2.0",
     "devDependencies": {
         "jquery": "*",
-        "highlightjs": "*"
+        "highlightjs": "*",
+        "parallax": "*"
     }
 }
